<resources>
    <string name="system_interface">System Interface</string>
    <string name="magnetic_card1">Magnetic Card</string>
    <string name="ic_card">IC Card</string>
    <string name="nfc">NFC</string>
    <string name="psam">PSAM</string>
    <string name="pinpad">Pinpad</string>
    <string name="printer">Printer</string>
    <string name="barcode">Barcode</string>
    <string name="beep">Beep</string>
    <string name="led">LED</string>
    <string name="decode">Dcode</string>
    <string name="emv_test">EMV Test</string>
    <string name="getSerialNo">Get SerialNo</string>
    <string name="getKsn">Get KSN</string>
    <string name="getDriverVersion">Get Driver Version</string>
    <string name="getSDKVersion">SDK Version</string>
    <string name="updateSysTime">Update Systemtime</string>
    <string name="getStoragePath">Get Storage Path</string>
    <string name="updateDriver">Update Driver</string>
    <string name="getIMSI">Get IMSI</string>
    <string name="getModel">Get Model</string>
    <string name="getICCID">Get ICC ID</string>
    <string name="getIMEI">Get IMEI</string>
    <string name="getHardwareInfo">Get Hardware Info</string>
    <string name="getSecurityDriverInfo">Get Security Driver Info</string>
    <string name="getManufactureName">Get Manufacture Name</string>
    <string name="getAndroidOsVersion">Get OS Version</string>
    <string name="getAndroidRomVersion">Get Rom Version</string>
    <string name="getKernelVersion">Get Kernel Version</string>
    <string name="reboot">Reboot</string>
    <string name="updateFirmware">Update Firmware</string>
    <string name="getUpdateFirmwareState">Get Update Firmware State</string>
    <string name="setAPN">Set APN</string>
    <string name="reboot_confirm">Reboot Confirm</string>
    <string name="getTrackData">Get Track Data</string>
    <string name="getEncryptTrackData">Get Encrypt Track Data</string>
    <string name="getEncryptFormatTrackData">Get Encrypt Format Track Data</string>
    <string name="cancelSwipe">Cancel Swipe</string>
    <string name="swipecard">Swipe</string>
    <string name="swipe_timeout">Swipe Timeout</string>
    <string name="swipe_success">Swipe Success</string>
    <string name="swipe_faile">Swipe Faile</string>
    <string name="track_data">Track Data</string>
    <string name="card_no">Card Number</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="format_data">Formated Data</string>
    <string name="service_code">Service Code</string>
    <string name="swipe_error">Swipe error,errorCode is</string>
    <string name="swipe_canceled">Canceled</string>
    <string name="track2_encryptdata">Track 2 encrypted data</string>
    <string name="track3_encryptdata">Track 3 encrypted data</string>
    <string name="track_encryptdata">Encrypted formatted track data</string>
    <string name="no_swipe">Not credit card</string>
    <string name="interrupted_success">Interrupted successfully</string>
    <string name="interrupted_error">Interrupted error</string>
    <string name="ic_open">Open</string>
    <string name="ic_reset">Reset</string>
    <string name="ic_exists">Check card</string>
    <string name="ic_apdu">Send apdu command</string>
    <string name="ic_halt">Halt</string>
    <string name="ic_close">Close</string>
    <string name="ic_pboc">Read pboc card Number</string>
    <string name="ic_open_success">Open IC device successfully</string>
    <string name="ic_open_faile">Failed to open IC card device</string>
    <string name="ic_dotnot_click_quickly">Do not click quickly</string>
    <string name="ic_close_success">Close IC device successfully</string>
    <string name="ic_close_faile">Failed to close IC card device</string>
    <string name="ic_halt_success">Halt IC device successfully</string>
    <string name="ic_halt_faile">Failed to halt IC card device</string>
    <string name="ic_main_dir_result">Select the Main directory result</string>
    <string name="ic_apdu_faile">APDU data exchange failed</string>
    <string name="ic_reset_result">Card reset result</string>
    <string name="ic_reset_faile">Failed to reset</string>
    <string name="ic_card_exist">Card inserted</string>
    <string name="ic_card_notexist">No card detected</string>
    <string name="nfc_card_type">Card type</string>
    <string name="card_type_auto">Auto Read</string>
    <string name="nfc_autoread">Start Auto Read</string>
    <string name="nfc_autoread_stop">Stop Auto Read</string>
    <string name="nfc_open">Open</string>
    <string name="nfc_reset">Reset</string>
    <string name="nfc_exists">Check card</string>
    <string name="nfc_cardtype">Card type</string>
    <string name="nfc_apdu">Send apdu command</string>
    <string name="nfc_pboc">Read pboc card Number</string>
    <string name="nfc_auth">Auth</string>
    <string name="nfc_readblock">Read block</string>
    <string name="nfc_writeblock">Write block</string>
    <string name="nfc_halt">Halt</string>
    <string name="nfc_open_success">Open the device successfully</string>
    <string name="nfc_open_faile">Failed to open the device</string>
    <string name="nfc_close_success">Close the device successfully</string>
    <string name="nfc_close_faile">Failed to close the device</string>
    <string name="nfc_card_exist">Card detected</string>
    <string name="nfc_card_notexist">No card detected</string>
    <string name="nfc_halt_success">Halt the device successfully</string>
    <string name="nfc_halt_faile">Failed to halt the device</string>
    <string name="nfc_read_cardtype_faile">Failed to read cardtype</string>
    <string name="nfc_read_cardtype_success">Card type:</string>
    <string name="nfc_apdu_success">APDU result</string>
    <string name="nfc_apdu_faile">APDU failed to be executed</string>
    <string name="nfc_auth_result">The result of the certification is:</string>
    <string name="nfc_auth_success">Authentication successful</string>
    <string name="nfc_auth_faile">Authentication failed</string>
    <string name="nfc_read_success">Block data read successfully</string>
    <string name="nfc_read_faile">Failed to read block data</string>
    <string name="nfc_write_result">Write block data returns:</string>
    <string name="nfc_write_success">Write block data successfully</string>
    <string name="nfc_write_faile">Write block data failed</string>
    <string name="print_status">Get the printer status</string>
    <string name="print_code">Print barcode</string>
    <string name="print_pic">Print image</string>
    <string name="print_qrcode">Print Qrcode</string>
    <string name="print_success">Print successfully</string>
    <string name="print_faile">Printing failed</string>
    <string name="print_faile_errcode">Printing failed,errcode：</string>
    <string name="get_print_status">Get the printer status：</string>
    <string name="print_begin">Start printing, start time is：</string>
    <string name="print_data1">Default print data</string>
    <string name="print_data2">Print data font enlarge</string>
    <string name="print_data3">Print data bold</string>
    <string name="print_data4">Left-aligned print data</string>
    <string name="print_data5">Center the print data alignment</string>
    <string name="print_data6">Right-aligned print data</string>
    <string name="print_data7">Print data underlined</string>
    <string name="print_data8">Print data does not wrap</string>
    <string name="print_data9">Print data line spacing</string>
    <string name="print_data10">Print data character spacing</string>
    <string name="print_data11">Print data left margin</string>
    <string name="print_end">Print completed, the end time is：</string>
    <string name="print_Arabic">Arabic Printing</string>
    <string name="print_sabra">Sabra Printing</string>
    <string name="card_type_m1">M1 Card</string>
    <string name="card_type_nfc_cpu">CPU Card</string>
    <string name="psam_slot">PSAM slot</string>
    <string name="psam_open">Open</string>
    <string name="psam_reset">Reset</string>
    <string name="psam_apdu">Send apdu command</string>
    <string name="psam_halt">Halt</string>
    <string name="psam_open_success">PSAM card device opens successfully</string>
    <string name="psam_open_faile">PSAM card device failed to open</string>
    <string name="psam_reset_success">PSAM card device reset successfully</string>
    <string name="psam_reset_faile">PSAM card device failed to reset</string>
    <string name="psam_close_success">PSAM card device close successfully</string>
    <string name="psam_close_faile">PSAM card device failed to close</string>
    <string name="qrcode">Scan</string>
    <string name="qrcode_stop">Stop to scan</string>
    <string name="qrcode_back_camera">Use the rear camera scan code</string>
    <string name="qrcode_result">Result</string>
    <string name="qrcode_cancel">Cancel scan</string>
    <string name="qrcode_timeout">Scan timeout</string>
    <string name="qrcode_openfaile">Open camera faile</string>
    <string name="decode_init">Init</string>
    <string name="decode1">Decode</string>
    <string name="decode_init_success">Decoding initialization is successful</string>
    <string name="decode_init_faile">Decoding initialization failed</string>
    <string name="decode_data">Decode result:</string>
    <string name="decode_data_non">No decoding data</string>
    <string name="decode_exit">exit successfully</string>
    <string name="beep_start">Start beep</string>
    <string name="beep_stop">Stop beep</string>
    <string name="led_start">Start Marquee</string>
    <string name="led_stop">Stop Marquee</string>
    <string name="tip_cmd">Interface</string>
    <string name="tip_log">Log</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="result">Result</string>
    <string name="error_code">ErrorCode:</string>
    <string name="pinpad_type">Pinpad type</string>
    <string name="pinpad_type_internal">Internal</string>
    <string name="pinpad_type_external">External</string>
    <string name="pinpad_mode">Pinpad Mode</string>
    <string name="pinpad_mode_sequence">sequence</string>
    <string name="pinpad_mode_random">random</string>
    <string name="pinpad_read_pin">Read pin</string>
    <string name="pinpad_set_pin_second">Second pin</string>
    <string name="pinpad_input_masterkey">Inject masterkey</string>
    <string name="pinpad_input_pik">Inject PIK</string>
    <string name="pinpad_input_tdk">Inject TDK</string>
    <string name="pinpad_input_masterkey_mak">Inject masterkey mak</string>
    <string name="pinpad_encrypt_tdk">Encrypt tdk</string>
    <string name="pinpad_get_random">Get random</string>
    <string name="pinpad_cancel_input_pin">Cancel input pin</string>
    <string name="pinpad_get_offline_pin">Get offline pin</string>
    <string name="pinpad_input_tek">Inject TEK</string>
    <string name="pinpad_input_tek_encrypt_masterkey">Inject the TEK encrypted master key</string>
    <string name="pinpad_input_tek_encrypt_mak">Inject TEK encrypted MAK</string>
    <string name="pinpad_input_tek_pik">Inject TEK encrypted PIK</string>
    <string name="pinpad_input_tek_tdk">Inject TEK encrypted TDK</string>
    <string name="pinpad_compute_mac">Calculate MAC</string>
    <string name="pinpad_show">Pinpad display</string>
    <string name="pinpad_confim_input">Confirm PIN input</string>
    <string name="pinpad_get_dukpt_pin">Get dukpt PIN</string>
    <string name="pinpad_get_ksn">KSN:</string>
    <string name="pinpad_dukpt_inject">Inject DUKPT</string>
    <string name="pinpad_inject_dukpt_key">Inject DUKPT key</string>
    <string name="prompt_password">Password</string>
    <string name="conn_up">Conn</string>
    <string name="version">Version No.</string>
    <string name="printtest">Print</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="plate_number">Plate Number</string>
</resources>