<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/title_header_layout"
        android:id="@+id/include" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left|center"
            android:text="@string/pinpad_mode" />

        <RadioGroup
            android:id="@+id/pinpad_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/pinpad_mode0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/pinpad_mode_sequence" />

            <RadioButton
                android:id="@+id/pinpad_mode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:checked="true"
                android:text="@string/pinpad_mode_random" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/psam_slot"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:text="@string/tip_cmd"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/tip_log"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fadeScrollbars="false"
            android:scrollbars="vertical" />

    </LinearLayout>


</LinearLayout>
