<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theoretics.mobilepos.activity.SystemInfoActivity">

    <include
        layout="@layout/title_header_layout"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/include"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/nfc_card_type"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:text="@string/tip_cmd"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/list_cardtype"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <ListView
                android:id="@+id/list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tip_log"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_log"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:fadeScrollbars="false"
                android:scrollbars="vertical" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
