<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theoretics.mobilepos.activity.SystemInfoActivity">

    <include
        layout="@layout/title_header_layout"
        android:id="@+id/include" />

    <LinearLayout
        android:id="@+id/psam_slot"
        android:layout_below="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psam_slot"
            android:layout_gravity="center"/>

        <RadioGroup
            android:id="@+id/rgpsam_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/psam_slot1"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="1" />

            <RadioButton
                android:id="@+id/psam_slot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2" />
        </RadioGroup>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/psam_slot"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:text="@string/tip_cmd"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:text="@string/tip_log"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_log"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:fadeScrollbars="false"
            android:scrollbars="vertical" />

    </LinearLayout>

</RelativeLayout>
