<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg2"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:onClick="test"
            android:text="@string/version"
            android:visibility="gone" />

        <Button
            android:id="@+id/print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:onClick="test"
            android:text="@string/printtest"
            android:visibility="gone" />

        <Button
            android:id="@+id/led"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:onClick="test"
            android:text="LED测试"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/user"
            android:text="Username"
            android:textColor="@color/a_normal"
            android:textSize="20sp"
            android:textStyle="normal|italic" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="229sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="Username"
            android:ems="10"
            android:hint="user name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/baseColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/key_pass"
            android:text="@string/prompt_password"
            android:textColor="@color/a_normal"
            android:textSize="20sp"
            android:textStyle="normal|italic" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="229sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/baseColor"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/logINBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            app:srcCompat="@drawable/login" />

    </LinearLayout>

</LinearLayout>